--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,33 @@
-body {
-    background-color: #999;
+body{
+    background-color: #5F9EA0;
     width: 100%;
     max-width: 1024px;
     margin: 0 auto;
 }
+#nav-menu{
+    background-color: #5F9EA0;
+}
+/*
+ {
+    background-color: #999;
+}*/
 
 header {
-    font-size: 30px;
-    font-size: 1.6em;
+    font-size: 50px;
     text-align: center
 }
 
 header,
 main,
 footer {
-    background-color: #ddd;
+    background-color: #5F9EA0;
+    font-family: 'Calibri'
+}
 
+figure {
+    margin: 0;
+    text-align: center;
+    font-style: italic;
 }
 
 h2 {
@@ -30,21 +42,8 @@ img {
 
 section {
     margin-right: auto;
-    font-family: 'Calibri';
 }
 
 p {
     padding: 0em;
 }
-
-/*
-body {
-    color: white;
-    background-color: black;
-    font-family: 'Sacramento', cursive;
-    font-size: 32px;
-    margin-top: 5%;
-    margin-left: 20%;
-    margin-right: 20%;
-  }
-*/
